# pi-io-server

./: README.md
documents/: design.md
software/application/: notes
software/application/app/: dash_plots.py  io-control-server.py  socket_server.py  tools.py
software/application/app/assets/: base-styles.css  spc-custom-styles.css
software/application/deploy/: README.md  cmdline.txt  config.txt  dash_server.conf  io-control-supervisord.conf  supervisord.service  wpa_supplicant.conf
software/cpp/libhardwareabstractionlayer/: CMakeLists.txt
software/cpp/libhardwareabstractionlayer/source/: DataRun.h  Hardware.c  RunConfig.h  adc.c  adc.h  dac.c  dac.h  writec.c
software/cpp/libhardwareabstractionlayer/source/EmitterBoard/: Hardware.h
software/python/function-library/: .gitignore  .gitmodules  setup.py
software/python/function-library/function_library/: __init__.py
software/python/hardware_abstraction_layer/: .gitignore  README.md  setup.py
software/python/hardware_abstraction_layer/hardware_abstraction_layer/: EmitterBoard.py  EmitterBoardHardware.py  __init__.py
software/python/io-control/: setup.py
software/python/io-control/io-control/: SystemSettings.py  __init__.py  fake_queue.py  main.py  tools.py
